Uptake upstream
(cherry picked from commit 900cb620c321e28b05765958ab633e8f5bc6565c)